feat: implementation mvp context variable (#4717)
Co-authored-by: nathansandi <nathansandi@users.noreply.github.com>
Co-authored-by: Vinicius Goulart <vinicius.goulart@camunda.com>